--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 
   <!-- Template Styles Start -->
-  <link rel="stylesheet" type="text/css" href="css/loaders/loader-color-1.css">
-  <link rel="stylesheet" type="text/css" href="css/plugins.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/colors/color-1.css">
+  <link rel="stylesheet" type="text/css" href="mixdesign.dev/themeforest/axio/css/loaders/loader-color-1.css">
+  <link rel="stylesheet" type="text/css" href="mixdesign.dev/themeforest/axio/css/plugins.css">
+  <link rel="stylesheet" type="text/css" href="mixdesign.dev/themeforest/axio/css/main.css">
+  <link rel="stylesheet" type="text/css" href="mixdesign.dev/themeforest/axio/css/colors/color-1.css">
   <!-- Template Styles End -->
 
   <!-- Custom Browser Color Start -->
@@ -149,10 +149,10 @@
 
 
   <!-- Load Scripts Start -->
-  <script src="js/libs.min.js"></script>
-  <script src="js/gallery-init.js"></script>
-  <script src="js/custom.js"></script>
-  <script src="js/maps/map-color-1.js"></script>
+  <script src="mixdesign.dev/themeforest/axio/js/libs.min.js"></script>
+  <script src="mixdesign.dev/themeforest/axio/js/gallery-init.js"></script>
+  <script src="mixdesign.dev/themeforest/axio/js/custom.js"></script>
+  <script src="mixdesign.dev/themeforest/axio/js/maps/map-color-1.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNMDtmEsvSevM4ztfsbhLfLNZhKHCvWXk"></script>
   <!-- Load Scripts End -->
 
