--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <!-- Page Title-->
   <title>The Studio VS - Coming Soon</title>
 
+  <link rel="icon" type="image/png" href="mixdesign.dev/themeforest/axio/img/backgrounds/thestudiovs.jpeg" />
+
 
   <!-- Template Styles Start -->
   <link rel="stylesheet" type="text/css" href="mixdesign.dev/themeforest/axio/css/loaders/loader-color-1.css">
@@ -35,7 +37,8 @@
     <div class="loader__content">
       <div class="loader__logo slideInDown">
         <!-- Your Logo Here -->
-        <!-- <img src="img/logo-loader.svg" alt="Axio - Coming Soon Template"> -->
+        <img src="mixdesign.dev/themeforest/axio/img/backgrounds/thestudiovsBG.png" alt="The Studio VS - Comming Soon"
+          style="height: 100px; width: 100px; margin-left: -20px; margin-bottom: 10px;">
       </div>
       <div class="loader__caption slideInUp">
         <p class="loading-text">Loading</p>
@@ -75,6 +78,14 @@
 
           <!-- Intro Header Start -->
           <div class="intro__header">
+
+            <div>
+
+              <img src="mixdesign.dev/themeforest/axio/img/backgrounds/thestudiovsBG.png"
+                alt="The Studio VS - Comming Soon"
+                style="height: 100px; width: 100px; margin-left: -20px; margin-bottom: 10px;">
+              <p class="intro__title" style="color: white; font-weight: bold; margin-left: -30px; margin-top: -20px;" >The Studio VS</p>
+            </div>
 
             <!-- Menu Trigger Start - Visible on Mobile -->
             <a href="#0" id="menu-trigger" class="menu-trigger">
@@ -135,7 +146,8 @@
           <div class="aside__socials">
             <ul class="socials">
               <li>
-                <a href="https://www.instagram.com/" target="_blank">
+                <a href="https://www.instagram.com/studio.vs._?igsh=MXN6Yncxcmh5M2t3Nw%3D%3D&utm_source=qr"
+                  target="_blank">
                   <i class="fa-brands fa-instagram"></i>
                 </a>
               </li>
