--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <html lang="en" class="no-js">
 
-<!-- Mirrored from templates.fabric-lab.co/archios/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 05 Jul 2025 20:32:27 GMT -->
-
 <head>
 	<title>The Studio Vs</title>
 
@@ -465,18 +463,18 @@
 						<li>
 							<a href="#services">Services</a>
 						</li>
-						<li>
+						<!-- <li>
 							<a href="#team">Team</a>
-						</li>
+						</li> -->
 						<li>
 							<a href="#services2">Alternative Ser.</a>
 						</li>
 						<li>
 							<a href="#work">Work</a>
 						</li>
-						<li>
+						<!-- <li>
 							<a href="#blog">Blog</a>
-						</li>
+						</li> -->
 						<li>
 							<a href="#contact">Contact</a>
 						</li>
@@ -566,52 +564,47 @@
 							<div class="row">
 								<div class="col-lg-4 col-md-6">
 									<div class="services-post">
-										<a href="templates.fabric-lab.co/archios/single-project.html"><i
-												class="fas fa-university"></i></a>
+										<i class="fas fa-laptop-house"></i>
+										<h4>Architecture</h4>
+										<p>Dreams under construction </p>
+									</div>
+								</div>
+								<div class="col-lg-4 col-md-6">
+									<div class="services-post">
+										<i class="fas fa-university"></i>
 										<h4>Construction</h4>
 										<p>touch the Sky</p>
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6">
 									<div class="services-post">
-										<a href="templates.fabric-lab.co/archios/single-project.html"><i
-												class="fas fa-brush"></i></a>
+										<i class="fas fa-brush"></i>
 										<h4>Interior Design</h4>
 										<p>Create your dream house </p>
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6">
 									<div class="services-post">
-										<a href="templates.fabric-lab.co/archios/single-project.html"><i
-												class="fas fa-paint-roller"></i></a>
+										<i class="fas fa-paint-roller"></i>
 										<h4>Design And Build</h4>
 										<p>From imagination to real </p>
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6">
 									<div class="services-post">
-										<a href="templates.fabric-lab.co/archios/single-project.html"><i
-												class="fas fa-briefcase"></i></a>
+										<i class="fas fa-briefcase"></i>
 										<h4>Consulting</h4>
 										<p>Shapping for a better future</p>
 									</div>
 								</div>
 								<div class="col-lg-4 col-md-6">
 									<div class="services-post">
-										<a href="templates.fabric-lab.co/archios/single-project.html"><i
-												class="fas fa-wrench"></i></a>
+										<i class="fas fa-wrench"></i>
 										<h4>Special Projects</h4>
 										<p>Building castle out of waste </p>
 									</div>
 								</div>
-								<div class="col-lg-4 col-md-6">
-									<div class="services-post">
-										<a href="templates.fabric-lab.co/archios/single-project.html"><i
-												class="fas fa-laptop-house"></i></a>
-										<h4>House Renvation</h4>
-										<p>Dreams under construction </p>
-									</div>
-								</div>
+
 							</div>
 						</div>
 					</div>
@@ -621,7 +614,7 @@
 
 				<!-- team-section 
 				================================================== -->
-				<section class="team-section" id="team">
+				<!-- <section class="team-section" id="team">
 					<div class="section-title">
 						<span>03</span>
 						<h1>Team</h1>
@@ -715,14 +708,14 @@
 						</div>
 					</div>
 
-				</section>
+				</section> -->
 				<!-- End team-section -->
 
 				<!-- tabs-collapse-section 
 				================================================== -->
 				<section class="tabs-collapse-section" id="services2">
 					<div class="section-title">
-						<span>04</span>
+						<span>03</span>
 						<h1>Alternative Service</h1>
 					</div>
 
@@ -871,7 +864,7 @@
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 											tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
 										</p>
-										<a href="templates.fabric-lab.co/archios/portfolio.html"
+										<a href="portfolio.html"
 											class="theme-button"><span>Projects</span></a>
 									</div>
 								</div>
@@ -892,7 +885,7 @@
 				================================================== -->
 				<section class="scroller-section" id="work">
 					<div class="section-title">
-						<span>05</span>
+						<span>04</span>
 						<h1>Work</h1>
 					</div>
 					<div class="container">
@@ -912,8 +905,8 @@
 										<div class="hover-box">
 											<span>01</span>
 											<a class="cat-link"
-												href="templates.fabric-lab.co/archios/portfolio.html">buildings</a>
-											<h4><a href="templates.fabric-lab.co/archios/single-project.html">The
+												href="portfolio.html">buildings</a>
+											<h4><a href="single-project.html">The
 													concept for better living</a></h4>
 										</div>
 									</div>
@@ -928,8 +921,8 @@
 										<div class="hover-box">
 											<span>02</span>
 											<a class="cat-link"
-												href="templates.fabric-lab.co/archios/portfolio.html">buildings</a>
-											<h4><a href="templates.fabric-lab.co/archios/single-project.html">Dreams
+												href="portfolio.html">buildings</a>
+											<h4><a href="single-project.html">Dreams
 													under construction</a></h4>
 										</div>
 									</div>
@@ -944,8 +937,8 @@
 										<div class="hover-box">
 											<span>03</span>
 											<a class="cat-link"
-												href="templates.fabric-lab.co/archios/portfolio.html">buildings</a>
-											<h4><a href="templates.fabric-lab.co/archios/single-project.html">Shaping
+												href="portfolio.html">buildings</a>
+											<h4><a href="single-project.html">Shaping
 													for a better future</a></h4>
 										</div>
 									</div>
@@ -960,8 +953,8 @@
 										<div class="hover-box">
 											<span>04</span>
 											<a class="cat-link"
-												href="templates.fabric-lab.co/archios/portfolio.html">buildings</a>
-											<h4><a href="templates.fabric-lab.co/archios/single-project.html">The
+												href="portfolio.html">buildings</a>
+											<h4><a href="single-project.html">The
 													concept for better living</a></h4>
 										</div>
 									</div>
@@ -976,8 +969,8 @@
 										<div class="hover-box">
 											<span>05</span>
 											<a class="cat-link"
-												href="templates.fabric-lab.co/archios/portfolio.html">buildings</a>
-											<h4><a href="templates.fabric-lab.co/archios/single-project.html">Dreams
+												href="portfolio.html">buildings</a>
+											<h4><a href="single-project.html">Dreams
 													under construction</a></h4>
 										</div>
 									</div>
@@ -991,7 +984,7 @@
 
 				<!-- blog-section 
 				================================================== -->
-				<section class="blog-section" id="blog">
+				<!-- <section class="blog-section" id="blog">
 					<div class="section-title">
 						<span>06</span>
 						<h1>Blog</h1>
@@ -1103,14 +1096,14 @@
 
 						</div>
 					</div>
-				</section>
+				</section> -->
 				<!-- End blog-section -->
 
 				<!-- contact-info-section 
 				================================================== -->
 				<section class="contact-info-section" id="contact">
 					<div class="section-title">
-						<span>07</span>
+						<span>05</span>
 						<h1>Contact</h1>
 					</div>
 
@@ -1262,8 +1255,8 @@
 									<div class="footer-widget-line">
 										<h5>Get in Touch</h5>
 										<ul class="custom-list">
-											<li><a href="#">hello@Archiostheme.com</a></li>
-											<li><a href="#">0055 1200 6700</a></li>
+											<li><a href="#">hello@thestudiovs.com</a></li>
+											<li><a href="#">0000 0000 0000</a></li>
 										</ul>
 									</div>
 								</div>
@@ -1279,7 +1272,7 @@
 					<div class="container-fluid">
 						<div class="row">
 							<div class="col-sm-6">
-								<p>&copy; Archios 2021</p>
+								<p>&copy; The Studio Vs 2025</p>
 							</div>
 							<div class="col-sm-6">
 								<ul class="social-list">
