--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<!-- Favicon -->
+	<link rel="icon" type="image/x-icon" href="templates.fabric-lab.co/archios/images/logo.png">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
 	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -864,8 +866,7 @@
 										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 											tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
 										</p>
-										<a href="portfolio.html"
-											class="theme-button"><span>Projects</span></a>
+										<a href="portfolio.html" class="theme-button"><span>Projects</span></a>
 									</div>
 								</div>
 								<div class="col-lg-7">
@@ -904,8 +905,7 @@
 										</div>
 										<div class="hover-box">
 											<span>01</span>
-											<a class="cat-link"
-												href="portfolio.html">buildings</a>
+											<a class="cat-link" href="portfolio.html">buildings</a>
 											<h4><a href="single-project.html">The
 													concept for better living</a></h4>
 										</div>
@@ -920,8 +920,7 @@
 										</div>
 										<div class="hover-box">
 											<span>02</span>
-											<a class="cat-link"
-												href="portfolio.html">buildings</a>
+											<a class="cat-link" href="portfolio.html">buildings</a>
 											<h4><a href="single-project.html">Dreams
 													under construction</a></h4>
 										</div>
@@ -936,8 +935,7 @@
 										</div>
 										<div class="hover-box">
 											<span>03</span>
-											<a class="cat-link"
-												href="portfolio.html">buildings</a>
+											<a class="cat-link" href="portfolio.html">buildings</a>
 											<h4><a href="single-project.html">Shaping
 													for a better future</a></h4>
 										</div>
@@ -952,8 +950,7 @@
 										</div>
 										<div class="hover-box">
 											<span>04</span>
-											<a class="cat-link"
-												href="portfolio.html">buildings</a>
+											<a class="cat-link" href="portfolio.html">buildings</a>
 											<h4><a href="single-project.html">The
 													concept for better living</a></h4>
 										</div>
@@ -968,8 +965,7 @@
 										</div>
 										<div class="hover-box">
 											<span>05</span>
-											<a class="cat-link"
-												href="portfolio.html">buildings</a>
+											<a class="cat-link" href="portfolio.html">buildings</a>
 											<h4><a href="single-project.html">Dreams
 													under construction</a></h4>
 										</div>
