--- a/single-project.html
+++ b/single-project.html
@@ -11,6 +11,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+	<!-- Favicon -->
+	<link rel="icon" type="image/x-icon" href="templates.fabric-lab.co/archios/images/logo.png">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com/">
 	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
